hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/ttuple.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function dyn(): dynamic { return varray[]; }

function f(): (int, int) {
  return dyn(); // error
}
